# autocomplete

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  example.sh  install.sh
.github/workflows/: continuous_integration.yml
benchmark/: CMakeLists.txt  benchmark_common.hpp  benchmark_conjunctive_topk.cpp  benchmark_fc_dictionary.cpp  benchmark_integer_fc_dictionary.cpp  benchmark_locate_prefix.cpp  benchmark_prefix_topk.cpp  benchmark_topk.cpp  effectiveness.cpp
include/: autocomplete.hpp  autocomplete2.hpp  autocomplete3.hpp  autocomplete4.hpp  autocomplete_common.hpp  bit_vector.hpp  blocked_inverted_index.hpp  building_util.hpp  compact_forward_index.hpp  compact_vector.hpp  completion.hpp  completion_set.hpp  completion_trie.hpp  constants.hpp  delta_forward_index.hpp  fc_dictionary.hpp  forward_index.hpp  forward_index2.hpp  integer_codes.hpp  integer_fc_dictionary.hpp  inverted_index.hpp  min_heap.hpp  minimal_docids.hpp  parameters.hpp  probe.hpp  scored_completion_set.hpp  scored_string_pool.hpp  scored_strings_pool.hpp  statistics.hpp  strings_pool.hpp  types.hpp  uint32_vec.hpp  uint_vec.hpp  uncompressed_list.hpp  unsorted_list.hpp  util.hpp  util_types.hpp
include/ef/: compact_ef.hpp  darray.hpp  ef_parameters.hpp  ef_sequence.hpp
include/succinct_rmq/: README.md  bp_vector.hpp  bp_vector_support.hpp  cartesian_tree.hpp  rs_bit_vector.hpp
results/: README.md  conjunctive_topk.md  fc_dictionary.md  integer_fc_dictionary.md  inverted_index_space.md  prefix_topk.md  space.md  topk.md
script/: benchmark_dictionaries.sh  build_indexes.py  collect_effectiveness_results_by_varying_percentage.py  collect_locate_prefix_results_by_varying_percentage.py  collect_results.py  collect_results_by_varying_percentage.py  collect_results_by_varying_percetange.py  collect_results_conjunctive_topk.py  collect_results_prefix_topk.py
src/: CMakeLists.txt  build.cpp  check_topk.cpp  map_queries.cpp  output_ds2i_format.cpp  statistics.cpp  web_server.cpp
test/: CMakeLists.txt  test_autocomplete.cpp  test_blocked_inverted_index.cpp  test_cartesian_tree.cpp  test_common.hpp  test_compact_forward_index.cpp  test_completion_trie.cpp  test_fc_dictionary.cpp  test_forward_index.cpp  test_integer_fc_dictionary.cpp  test_inverted_index.cpp  test_locate_prefix.cpp  test_succinct_rmq.cpp  test_unsorted_list.cpp
test_data/: README.md  build_inverted_and_forward.py  build_stats.py  completions  completions.dict  completions.mapped  completions.mapped.stats  extract_dict.py  filter_and_preprocess.sh  filter_dataset.py  map_dataset.py  partition_queries_by_length.py  preprocess.sh  trec_05_efficiency_queries  trec_05_efficiency_queries.completions
test_data/trec_05_efficiency_queries/: trec_05_efficiency_queries.completions
web/: index.html  jquery-1.8.2.min.js  jquery.autocomplete.js  styles.css  topkcomp.js
