add_executable(test_completion_trie test_completion_trie.cpp)
add_executable(test_fc_dictionary test_fc_dictionary.cpp)
add_executable(test_integer_fc_dictionary test_integer_fc_dictionary.cpp)
add_executable(test_cartesian_tree test_cartesian_tree.cpp)
add_executable(test_inverted_index test_inverted_index.cpp)
add_executable(test_forward_index test_forward_index.cpp)
add_executable(test_unsorted_list test_unsorted_list.cpp)
add_executable(test_autocomplete test_autocomplete.cpp)
